unpackaged/main/default/objects/LogATC__c/LogATC__c.object-meta.xml
<CustomObject>
    <label>LogATC</label>
    <nameField>
        <label>Nombre de LogATC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogATC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>