unpackaged/main/default/objects/LogATC__c/fields/FechaHora__c.field-meta.xml
<CustomField>
    <fullName>FechaHora__c</fullName>
    <label>Fecha y Hora</label>
    <type>DateTime</type>
</CustomField>