unpackaged/main/default/objects/LogATC__c/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <label>Método</label>
    <length>255</length>
    <type>Text</type>
</CustomField>